# oomplay

./: .gitattributes  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: CICD.yml
completions/bash/: oomplay.bash
completions/elvish/: oomplay.elv
completions/fish/: oomplay.fish
completions/powershell/: _oomplay.ps1
completions/zsh/: _oomplay
dockerfiles/: tiup-5.3.0.dockerfile
src/: cli.rs  config.rs  docker.rs  main.rs  store.rs  update.rs  util.rs
src/backend/: bigquery.rs  cassandra.rs  dynamodb.rs  mod.rs  mysql.rs  postgres.rs  postgresql.rs  redis.rs  redshift.rs  snowflake.rs  sqlite.rs  tidb.rs  tikv.rs
