[package]
name = "oomplay"
version = "0.1.1"
edition = "2021"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
categories = ["command-line-utilities"]
description = "Playground manager for oomstore"
license = "MIT/Apache-2.0"
exclude = ["/completions"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.7", features = ["wrap_help", "derive"] }
clap_generate = "3.0.0-beta.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bollard = "0.11"
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4"
colog = "1.1"

[build-dependencies]
clap = { version = "3.0.0-beta.7", features = ["wrap_help", "derive"] }
clap_generate = "3.0.0-beta.7"
