[package]
name = "oomplay"
version = "0.6.8"
edition = "2021"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
categories = ["command-line-utilities"]
description = "Playground manager for oomstore"
homepage = "https://github.com/oom-ai/oomplay"
repository = "https://github.com/oom-ai/oomplay"
license = "MIT/Apache-2.0"
exclude = ["/completions"]

[dependencies]
anyhow = "1.0"
clap = { version = "3", features = ["wrap_help", "derive"] }
clap_complete = "3"
bollard = "0.11"
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4"
colog = "1.1"
strum = { version = "0.23", features = ["derive"] }
itertools = "0.10"
colored = "2.0"
fslock = "0.2.1"
num_cpus = "1.13"

[build-dependencies]
clap = { version = "3", features = ["wrap_help", "derive"] }
clap_complete = "3"
strum = { version = "0.23", features = ["derive"] }
num_cpus = "1.13"
